css/custom.css
:root {
  --jumbotron-padding-y: 3rem;
}

.jumbotron {
  padding-top: var(--jumbotron-padding-y);
  padding-bottom: var(--jumbotron-padding-y);
  margin-bottom: 0;
  background-color: #fff;
}
@media (min-width: 768px) {
  .jumbotron {
    padding-top: calc(var(--jumbotron-padding-y) * 2);
    padding-bottom: calc(var(--jumbotron-padding-y) * 2);
  }
}

.jumbotron p:last-child {
  margin-bottom: 0;
}

.jumbotron-heading {
  font-weight: 300;
}

.jumbotron .container {
  max-width: 40rem;
}

footer {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

footer p {
  margin-bottom: 0.25rem;
}

.box-shadow {
  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
}

body {
  font-family: 'Inter', sans-serif;
  font-weight: 400;
}

@media (min-width: 992px) {
  #intro,
  #coach,
  #program-details {
    padding-right: 15%;
    padding-left: 15%;
  }
}

p {
  font-size: 1.1rem;
}

.elDividerInner {
  border-color: rgba(136, 136, 136, 0.32);
}

.elDivider {
  display: block;
  width: 100%;
  min-height: 1px;
  margin: 0px;
}

hr.solid {
  border-top: 1px solid #bbb;
}

.li-color {
  color: rgb(242, 44, 51);
  padding-right: 1.5rem;
}

